lgtm/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
    - host: grafana.wololoaeyoyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-deployment-service
                port:
                  number: 3000
